--- a/pages/index.html
+++ b/pages/index.html
@@ -1,1 +1,34 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Myntra Clone</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="logo">Myntra</div>
+    <input type="text" placeholder="Search for products..." id="searchBox"/>
+    <nav>
+      <a href="#">Men</a>
+      <a href="#">Women</a>
+      <a href="#">Kids</a>
+      <a href="#">Home & Living</a>
+      <a href="#">Beauty</a>
+      <a href="cart.html" id ="cartLink"> cart(<span id ="cartCount">0</span>)</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <img src="https://via.placeholder.com/1200x300?text=Myntra+Sale+Banner" alt="Banner"/>
+  </section>
+
+  <section class="products" id="productList">
+    <!-- Products will be injected using JS -->
+  </section>
+
+  <script src="script.js"></script>
+</body>
+</html>
